--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,13 @@
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 
   <link rel="stylesheet" href="temp/styles/styles.css">
+  <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
 
 </head>
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#">Get in Touch</a>
+    <a href="#" class="btn">Get in Touch</a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,13 +25,26 @@
     </nav>
   </header>
 
-  <div class="banner">
-    <img src="assets/images/banner.jpg">
-    <h1>Anderson Construction.</h1>
-    <h2>hello</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
+  <div class="banner"> <!--large-hero on the example-->
+    <img src="assets/images/banner-large.jpg">
+    <div class="banner__text-content">
+      <h1 class="banner__title">Anderson Construction</h1>
+      <h2 class="banner__subtitle">David Anderson - Owner</h2>
+      <p class="banner__description">Licensed and Bonded</p>
+      <p><a href="#">Contact us Today</a></p>
+
+      <!-- <a>
+        <span class="text">Contact us Today</span>
+        <span class="line -right"></span>
+        <span class="line -top"></span>
+        <span class="line -left"></span>
+        <span class="line -bottom"></span>
+      </a> -->
+
+
+    </div>
   </div>
+
 
   <div id="our-beginning">
     <h2>The first trip we planned was our own.</h2>
@@ -85,7 +99,7 @@
   </div>
 
   <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#">Get in Touch</a></p>
+    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn">Get in Touch</a></p>
   </footer>
 </body>
 </html>
