--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,12 @@
 </head>
 <body>
   <header>
+    <div>
+      <ul>
+        <li>Call us now!(222)2222 2222</li>
+        <li>contact@andersonconstruction.mail</li>
+      </ul>
+    </div>
     <img src="assets/images/icons/clear-view-escapes.svg">
     <a href="#" class="btn">Get in Touch</a>
     <nav>
@@ -35,24 +41,30 @@
     </picture>
 
     <div class="banner__text-content">
-      <h1 class="banner__title">Anderson Construction</h1>
-      <h2 class="banner__subtitle">David Anderson - Owner</h2>
-      <p class="banner__description">Licensed and Bonded</p>
-      <p><a href="#">Contact us Today</a></p>
+      <div class="wrapper wrapper__banner">
+        <div class="hello">
+          <h1 class="banner__title">COME HOME TO <strong style="color:#f7b71e">QUALITY</strong></h1>
+        </div>
 
-      <!-- <a>
-        <span class="text">Contact us Today</span>
-        <span class="line -right"></span>
-        <span class="line -top"></span>
-        <span class="line -left"></span>
-        <span class="line -bottom"></span>
-      </a> -->
+        <!-- <h2 class="banner__subtitle"></h2> -->
+        <p class="banner banner__description">Creating quality lifestyles, building stronger communities</p>
+        <p><a href="#" class="btn btn__large">Contact us Today</a></p>
+        <!-- cool button try -->
+        <!-- <div class="cool-btn">
+          <a class="cool-btn__link">
+          <span class="text">Contact us Today</span>
+          <span class="line -right"></span>
+          <span class="line -top"></span>
+          <span class="line -left"></span>
+          <span class="line -bottom"></span>
+        </a>
+      </div> -->
 
-
+      </div>
     </div>
   </div>
 
-
+<!-- 
   <div id="our-beginning">
     <h2>The first trip we planned was our own.</h2>
     <h3>Ever since, we&rsquo;ve been working to make travel better for everyone.</h3>
@@ -103,7 +115,7 @@
     <h3>Cat McKitty</h3>
     <h3>6 Time Escaper</h3>
     <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
-  </div>
+  </div> -->
 
   <footer>
     <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn">Get in Touch</a></p>
