--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         <li>contact@andersonconstruction.mail</li>
       </ul>
     </div>
-    <img src="assets/images/icons/clear-view-escapes.svg">
+    <img src="assets/images/icons/anderson.svg">
     <a href="#" class="btn">Get in Touch</a>
     <nav>
       <ul>
@@ -37,7 +37,7 @@
       <source srcset="assets/images/banner-large.jpg" media="(min-width:1200px)">
       <source srcset="assets/images/banner-medium.jpg" media="(min-width:990px)">
       <source srcset="assets/images/banner-small.jpg 990w, assets/images/banner-small-hi-dpi.jpg 1697w " media="(min-width:640px)">
-      <img srcset="assets/images/banner-smaller.jpg 640w, assets/images/banner-smaller-hi-dpi.jpg 1418w" alt="interior">
+      <img srcset="assets/images/banner-smaller.jpg 640w, assets/images/banner-smaller-hi-dpi.jpg 1418w" class="banner__image" alt="interior">
     </picture>
 
     <div class="banner__text-content">
@@ -64,40 +64,59 @@
     </div>
   </div>
 
-<!-- 
-  <div id="our-beginning">
-    <h2>The first trip we planned was our own.</h2>
-    <h3>Ever since, we&rsquo;ve been working to make travel better for everyone.</h3>
-    <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
-    <img src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">
-    <h2>Here&rsquo;s how we got started&hellip;</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
+
+  <div id="our-beginning" class="page-section">
+    <div class="wrapper">
+      <h2 class="headline headline--centered headline--light headline--b-margin-small">Honesty, Integrity, and Quality Workmanship</h2>
+      <h3 class="headline headline--centered headline--yellow headline--small headline--narrow headline--light headline--b-margin-large">Our goal then and now is </br> to provide quality <strong> on time  projects. </strong></h3>
+
+      <div class="wrapper wrapper--medium">
+        <img src="assets/images/working.jpg" alt="working">
+      </div>
+
+      <div class="row row--gutters">
+
+        <div class="row__medium-4">
+          <img src="assets/images/working2.jpg" alt="working2">
+        </div>
+
+        <div class="row__medium-8">
+          <h2 class="headline headline--centered">A little bit about us</h2>
+          <p>David Anderson Construction Inc. is a northwestern Wisconsin based residential and commercial construction company that has been building extraordinary structures for three decades. Our quality workmanship has earned us a reputation as one of the area's premiere contractors. We specialize in ground-up construction and well as renovations, add-ons, and remodeling. We are experts in wood or steel constructions</p>
+          <p>Also check out the <a href="work.html">project page</a> where we showcase some of our work.</p>    
+        </div>
+      </div>
+
+
+    </div>
   </div>
 
-  <div id="features">
-    <img src="assets/images/icons/star.svg">
-    <h2>Our Features</h2>
+
+  <div id="features" class="page-section page-section__red">
+    <div class="wrapper">
+      <img class="icons" src="assets/images/icons/tools.svg">
+      <h2>Anderson Construction guarantees:</h2>
+    
+      <img class="icons icons__bigger" src="assets/images/icons/on-time.svg">
+      <h3>On Schedule Completion</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adiping elit. Etiam placerat odio nec quam aliquet, velsa consectetur neque varius.</p>
   
-    <img src="assets/images/icons/rain.svg">
-    <h3>We&rsquo;ll Watch the Weather</h3>
-    <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
-
-    <img src="assets/images/icons/globe.svg">
-    <h3>Global Guides</h3>
-    <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of the world you want to escape to we know the most scenic and inspiring locations.</p>
-
-    <img src="assets/images/icons/wifi.svg">
-    <h3>Wi-Fi Waypoints</h3>
-    <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped out where local wi-fi spots are and marked them in our app&rsquo;s map view.</p>
-
-    <img src="assets/images/icons/fire.svg">
-    <h3>Survival Kit</h3>
-    <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you to setup a tent, start a fire, scratch your own back and lower your taxes.</p>
+      <img class="icons"  src="assets/images/icons/cost-effective.svg">
+      <h3>Cost-effective Process from beginning to end</h3>
+      <p>We use budget friendly, high quality, long lasting materials that increase home efficiency.</p>
+  
+      <img class="icons"  src="assets/images/icons/like.svg">
+      <h3>Final product exceeds expectations</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adiping elit. Etiam placerat odio nec quam aliquet, velsa consectetur neque varius.</p>
+  
+      <img class="icons"  src="assets/images/icons/heart.svg">
+      <h3>Honesty, integrity, and great Value</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adiping elit. Etiam placerat odio nec quam aliquet, velsa consectetur neque varius.</p>
+    </div>
   </div>
 
-  <div id="testimonials">
+
+  <!-- <div id="testimonials">
     <img src="assets/images/icons/comment.svg">
     <h2>Real Testimonials</h2>
 
