--- a/app/index.html
+++ b/app/index.html
@@ -70,18 +70,22 @@
       <h2 class="headline headline--centered headline--light headline--b-margin-small">Honesty, Integrity, and Quality Workmanship</h2>
       <h3 class="headline headline--centered headline--yellow headline--small headline--narrow headline--light headline--b-margin-large">Our goal then and now is </br> to provide quality <strong> on time  projects. </strong></h3>
 
-      <div class="wrapper wrapper--medium">
-        <img src="assets/images/working.jpg" alt="working">
+      <div class="wrapper wrapper--medium wrapper--b-margin">
+        <img sizes="(min-width: 930px)940px,100vw" srcset="assets/images/working-low-res.jpg 565w, assets/images/working.jpg 940w,assets/images/working-hi-dpi.jpg 1880w" alt="working">
       </div>
 
       <div class="row row--gutters">
 
-        <div class="row__medium-4">
-          <img src="assets/images/working2.jpg" alt="working2">
+        <div class="row__medium-4 row__medium-4--larger">
+          <picture>
+            <source sizes="404px" srcset="assets/images/working2.jpg 404w,assets/images/working2-hi-dpi.jpg 940w" media="(min-width:1030px)">
+            <source sizes="382px" srcset="assets/images/working2-portrait.jpg 382w, assets/images/working2-portrait-hi-dpi.jpg 592w" media="(min-width:700px)">
+            <img src="assets/images/working2-landscape.jpg" alt="working2">
+          </picture>
         </div>
 
-        <div class="row__medium-8">
-          <h2 class="headline headline--centered">A little bit about us</h2>
+        <div class="row__medium-8 row__medium-8--smaller">
+          <h2 class="headline headline--centered">Why David Anderson Construction..</h2>
           <p>David Anderson Construction Inc. is a northwestern Wisconsin based residential and commercial construction company that has been building extraordinary structures for three decades. Our quality workmanship has earned us a reputation as one of the area's premiere contractors. We specialize in ground-up construction and well as renovations, add-ons, and remodeling. We are experts in wood or steel constructions</p>
           <p>Also check out the <a href="work.html">project page</a> where we showcase some of our work.</p>    
         </div>
