why anderson part finished

--- a/app/index.html
+++ b/app/index.html
@@ -76,20 +76,23 @@
 
       <div class="row row--gutters">
 
-        <div class="row__medium-4 row__medium-4--larger">
+        <div class="row__medium-4 row__medium-4--larger row__b-margin-until-medium">
           <picture>
-            <source sizes="404px" srcset="assets/images/working2.jpg 404w,assets/images/working2-hi-dpi.jpg 940w" media="(min-width:1030px)">
-            <source sizes="382px" srcset="assets/images/working2-portrait.jpg 382w, assets/images/working2-portrait-hi-dpi.jpg 592w" media="(min-width:700px)">
+            <source sizes="" srcset="assets/images/working2.jpg 404w,assets/images/working2-hi-dpi.jpg 940w" media="(min-width:1020px)">
+            <source sizes="" srcset="assets/images/working2-portrait.jpg 382w, assets/images/working2-portrait-hi-dpi.jpg 592w" media="(min-width:700px)">
             <img src="assets/images/working2-landscape.jpg" alt="working2">
           </picture>
         </div>
 
         <div class="row__medium-8 row__medium-8--smaller">
-          <h2 class="headline headline--centered">Why David Anderson Construction..</h2>
-          <p>David Anderson Construction Inc. is a northwestern Wisconsin based residential and commercial construction company that has been building extraordinary structures for three decades. Our quality workmanship has earned us a reputation as one of the area's premiere contractors. We specialize in ground-up construction and well as renovations, add-ons, and remodeling. We are experts in wood or steel constructions</p>
-          <p>Also check out the <a href="work.html">project page</a> where we showcase some of our work.</p>    
+          <div class="generic-content-container">
+            <h2 class="headline headline--centered headline--no-t-margin">Why David Anderson Construction..</h2>
+            <p>David Anderson Construction Inc. is a northwestern Wisconsin based residential and commercial construction company that has been building extraordinary structures for three decades. Our quality workmanship has earned us a reputation as one of the area's premiere contractors. We specialize in ground-up construction and well as renovations, add-ons, and remodeling. We are experts in wood or steel constructions</p>
+            <p>Also check out the <a href="work.html">project page</a> where we showcase some of our work.</p>    
+          </div>
         </div>
       </div>
+
 
 
     </div>
