--- a/app/index.html
+++ b/app/index.html
@@ -196,8 +196,14 @@
     </div>
   </div>
 
-  <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn">Get in Touch</a></p>
+  <div class="contact-info">
+
+  </div>
+
+  <footer class="site-footer">
+    <div class="wrapper">
+      <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span> <a href="#" class="btn btn__yellow">Get in Touch</a></p>
+    </div>
   </footer>
 </body>
 </html>
