mainYellow changed to mainBlue. header not complte

--- a/app/index.html
+++ b/app/index.html
@@ -13,23 +13,27 @@
 
 </head>
 <body>
-  <header>
-    <div>
-      <ul>
-        <li>Call us now!(222)2222 2222</li>
-        <li>contact@andersonconstruction.mail</li>
-      </ul>
+  <div>
+    <ul>
+      <li>Call us now!(222)2222 2222</li>
+      <li>contact@andersonconstruction.mail</li>
+    </ul>
+  </div>
+  <header class="site-header">
+    <div class="wrapper">
+        <img class="main-logo" src="assets/images/logo.jpg">
+        <div class="site-header__btn-container">
+          <a href="#" class="btn">Get in Touch</a>
+        </div>
+        <nav class="primary-nav primary-nav--pull-right">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="work.html">Our Work</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </nav>
     </div>
-    <img src="assets/images/icons/anderson.svg">
-    <a href="#" class="btn">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="work.html">Our Work</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
   </header>
 
   <div class="banner"> <!--large-hero on the example-->
@@ -44,7 +48,7 @@
     <div class="banner__text-content">
       <div class="wrapper wrapper__banner">
         <div class="hello">
-          <h1 class="banner__title">COME HOME TO <strong style="color:#f7b71e">QUALITY</strong></h1>
+          <h1 class="banner__title">COME HOME TO <strong style="color:#bbe1f4">QUALITY</strong></h1>
         </div>
 
         <!-- <h2 class="banner__subtitle"></h2> -->
