rough styling for call us now and nav bar

--- a/app/index.html
+++ b/app/index.html
@@ -13,15 +13,22 @@
 
 </head>
 <body>
-  <div>
-    <ul>
-      <li>Call us now!(222)2222 2222</li>
-      <li>contact@andersonconstruction.mail</li>
-    </ul>
-  </div>
+  
+    <div class="call-us">
+      <div class="wrapper">
+        <ul>
+          <li>Call us now!(222)2222 2222</li>
+          <li>contact@andersonconstruction.mail</li>
+        </ul>
+      </div>
+    </div>  
+
   <header class="site-header">
     <div class="wrapper">
+      <div class="site-header__logo">
         <img class="main-logo" src="assets/images/logo.jpg">
+      </div>
+
         <div class="site-header__btn-container">
           <a href="#" class="btn">Get in Touch</a>
         </div>
