little bit of styling that I want completeish

--- a/app/index.html
+++ b/app/index.html
@@ -29,17 +29,23 @@
         <img class="main-logo" src="assets/images/logo.jpg">
       </div>
 
-        <div class="site-header__btn-container">
+      <div class="site-header__menu-icon"></div>
+
+      <div class="site-header__menu-content">
+        <!-- <div class="site-header__btn-container">
           <a href="#" class="btn">Get in Touch</a>
-        </div>
+        </div> -->
         <nav class="primary-nav primary-nav--pull-right">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="work.html">Our Work</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="work.html">Our Work</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
+      </div>
+
+        
     </div>
   </header>
 
