webpack set up and some practice with object oriented js programming

--- a/app/index.html
+++ b/app/index.html
@@ -222,5 +222,7 @@
       <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span> <a href="#" class="btn btn__yellow">Get in Touch</a></p>
     </div>
   </footer>
+
+  <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
