--- a/app/contact.html
+++ b/app/contact.html
@@ -8,32 +8,59 @@
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 
   <link rel="stylesheet" href="temp/styles/styles.css">
+  
   <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
 
 </head>
 <body>
-  <header>
-    <div>
-      <ul>
-        <li>Call us now!(222)2222 2222</li>
-        <li>contact@andersonconstruction.mail</li>
-      </ul>
+  
+    <div class="call-us">
+      <div class="wrapper">
+        <ul>
+          <li>Call us now!(222)2222 2222</li>
+          <li>contact@andersonconstruction.mail</li>
+        </ul>
+      </div>
+    </div>  
+
+  <header class="site-header">
+    <div class="wrapper">
+      <div class="site-header__logo">
+        <img class="main-logo" src="assets/images/logo.jpg">
+      </div>
+
+      <div class="site-header__menu-icon"></div>
+
+      <div class="site-header__menu-content">
+        <!-- <div class="site-header__btn-container">
+          <a href="#" class="btn">Get in Touch</a>
+        </div> -->
+        <nav class="primary-nav primary-nav--pull-right">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="work.html">Our Work</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
+      </div>
+
+        
     </div>
-    <img src="assets/images/icons/anderson.svg">
-    <a href="#" class="btn">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="work.html">Our Work</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
   </header>
 
+  
 
-  <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn">Get in Touch</a></p>
+  <div class="contact-info">
+
+  </div>
+
+  <footer class="site-footer">
+    <div class="wrapper">
+      <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span> <a href="#" class="btn btn__yellow">Get in Touch</a></p>
+    </div>
   </footer>
+
+  <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
