--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,11 @@
         <img class="main-logo" src="assets/images/logo.jpg">
       </div>
 
-      <div class="site-header__menu-icon"></div>
+      <div class="site-header__menu-icon">
+        <div class="site-header__menu-icon__top"></div>
+        <div class="site-header__menu-icon__middle"></div>
+        <div class="site-header__menu-icon__bottom"></div>
+      </div>
 
       <div class="site-header__menu-content">
         <!-- <div class="site-header__btn-container">
