header is sort of complete. Need to comeback for better UI

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <!-- <h2 class="banner__subtitle"></h2> -->
-        <p class="banner banner__description">Creating quality lifestyles, building stronger communities</p>
+        <p class="banner__description">Creating quality lifestyles, building stronger communities</p>
         <p><a href="#" class="btn btn__large">Contact us Today</a></p>
         <!-- cool button try -->
         <!-- <div class="cool-btn">
