--- a/app/index.html
+++ b/app/index.html
@@ -37,12 +37,12 @@
         <!-- <div class="site-header__btn-container">
           <a href="#" class="btn">Get in Touch</a>
         </div> -->
-        <nav class="primary-nav primary-nav--pull-right">
+        <nav id="nav" class="primary-nav primary-nav--pull-right">
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="work.html">Our Work</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a class="primary-nav__active" href="index.html" >Home</a></li>
+              <li><a href="about.html" >About Us</a></li>
+              <li><a href="work.html"  >Our Work</a></li>
+              <li><a href="contact.html" >Contact Us</a></li>
             </ul>
           </nav>
       </div>
