--- a/app/work.html
+++ b/app/work.html
@@ -39,7 +39,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="work.html">Our Work</a></li>
+              <li><a class="primary-nav__active" href="work.html">Our Work</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </nav>
