--- a/app/about.html
+++ b/app/about.html
@@ -54,10 +54,10 @@
   <div class="banner"> <!--large-hero on the example-->
     
     <picture>
-      <source srcset="assets/images/banner-large.jpg" media="(min-width:1200px)">
-      <source srcset="assets/images/banner-medium.jpg" media="(min-width:990px)">
-      <source srcset="assets/images/banner-small.jpg 990w, assets/images/banner-small-hi-dpi.jpg 1697w " media="(min-width:640px)">
-      <img srcset="assets/images/banner-smaller.jpg 640w, assets/images/banner-smaller-hi-dpi.jpg 1418w" class="banner__image" alt="interior">
+      <source srcset="assets/images/about-large.jpg" media="(min-width:1020px)">
+      <source srcset="assets/images/about-medium.jpg" media="(min-width:768px)">
+      <source srcset="assets/images/about-small.jpg" media="(min-width:640px)">
+      <img srcset="assets/images/about-smaller.jpg" class="banner__image" alt="tool">
     </picture>
 
     <div class="banner__text-content">
