--- a/app/contact.html
+++ b/app/contact.html
@@ -70,8 +70,8 @@
 
 
 
-
-  <div class="wrapper wrapper__background-img-form">  
+<div class="page-section page-section--no-b-padding-until-large page-section--contact">
+<div class="wrapper wrapper__background-img-form">  
 <div class="form__wrapper">
   <div class="form__container">
     <div class="headline headline--small headline--centered">
@@ -224,6 +224,7 @@
   </div>
 </div>
 
+</div>
 </div>
 
 
