smaller screen nav in the enter

--- a/app/index.html
+++ b/app/index.html
@@ -32,17 +32,17 @@
         <img class="main-logo site-header__img" src="assets/images/logo.jpg">
       </div>
 
-      <div class="site-header__menu-icon">
+      <!-- <div class="site-header__menu-icon">
         <div class="site-header__menu-icon__middle"></div>
-      </div>
+      </div> -->
 
-      <div class="site-header__menu-content">
-        <!-- <div class="site-header__btn-container">
-          <a href="#" class="btn">Get in Touch</a>
-        </div> -->
-        <nav id="nav" class="primary-nav primary-nav--pull-right">
+      <div class="">
+        <nav id="nav" class="navbar">   
+          <div class="navebar__toggle">
+            <div class="navbar__toggle--middle"></div>
+          </div>            
             <ul>
-              <li><a class="primary-nav__active" href="index.html" >Home</a></li>
+              <li><a class="navbar__active" href="index.html" >Home</a></li>
               <li><a href="about.html" >About Us</a></li>
               <li><a href="work.html"  >Our Work</a></li>
               <li><a href="contact.html" >Contact Us</a></li>
