--- a/app/about.html
+++ b/app/about.html
@@ -70,7 +70,7 @@
 
         <!-- <h2 class="banner__subtitle"></h2> -->
         <p class="banner__description"></p>
-        <p><a href="contact.html" class="btn btn__large">Contact us Today</a></p>    
+        <!-- <p><a href="contact.html" class="btn btn__large">Contact us Today</a></p>     -->
 
       </div>
     </div>
