--- a/app/about.html
+++ b/app/about.html
@@ -36,13 +36,10 @@
       </div>
 
       <div class="site-header__menu-content">
-        <!-- <div class="site-header__btn-container">
-          <a href="#" class="btn">Get in Touch</a>
-        </div> -->
-        <nav id="nav" class="primary-nav primary-nav--pull-right">
+        <nav id="nav" class="navbar">
             <ul>
               <li><a href="index.html" >Home</a></li>
-              <li><a class="primary-nav__active" href="about.html" >About Us</a></li>
+              <li><a class="navbar__active" href="about.html" >About Us</a></li>
               <li><a href="work.html"  >Our Work</a></li>
               <li><a href="contact.html" >Contact Us</a></li>
             </ul>
