--- a/app/index.html
+++ b/app/index.html
@@ -11,20 +11,11 @@
   <!-- build:css assets/styles/styles.css -->
   <link rel="stylesheet" href="temp/styles/styles.css">
   <!-- endbuild -->
-  
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
 
 </head>
 <body>
-<!--   
-    <div class="call-us">
-      <div class="wrapper">
-        <ul>
-          <li>Call us now!(222)2222 2222</li>
-          <li>contact@andersonconstruction.mail</li>
-        </ul>
-      </div>
-    </div>   -->
 
   <header class="site-header">
     <div class="wrapper">
@@ -32,25 +23,20 @@
         <img class="main-logo site-header__img" src="assets/images/logo.jpg">
       </div>
 
-      <!-- <div class="site-header__menu-icon">
-        <div class="site-header__menu-icon__middle"></div>
-      </div> -->
+     <div class="site-header__menu-icon">
+       <div class="site-header__menu-icon__middle"></div>
+     </div>
 
-      <div class="">
+      <div class="site-header__menu-content">
         <nav id="nav" class="navbar">   
-          <div class="navebar__toggle">
-            <div class="navbar__toggle--middle"></div>
-          </div>            
-            <ul>
-              <li><a class="navbar__active" href="index.html" >Home</a></li>
-              <li><a href="about.html" >About Us</a></li>
-              <li><a href="work.html"  >Our Work</a></li>
-              <li><a href="contact.html" >Contact Us</a></li>
-            </ul>
-          </nav>
-      </div>
-
-        
+              <ul id="menu">
+                <li><a class="navbar__active" href="index.html" >Home</a></li>
+                <li><a href="about.html" >About Us</a></li>
+                <li><a href="work.html"  >Our Work</a></li>
+                <li><a href="contact.html" >Contact Us</a></li>
+              </ul>
+        </nav>
+      </div>        
     </div>
   </header>
 
