--- a/app/work.html
+++ b/app/work.html
@@ -94,7 +94,7 @@
         <div class="row">
           <div class="portfolio portfolio__half">
             <div class="portfolio__title">
-              <h3 class="portfolio__name">Adventtures Restuarnt</h3>
+              <h3 class="portfolio__name">Adventtures</h3>
               <p class="portfolio__subtitle">Siren,WI</p>
             </div>
             <div class="portfolio__mainImage">
