--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
           <div class="generic-content-container">
             <h2 class="headline headline--centered headline--no-t-margin">Why David Anderson Construction..</h2>
             <p>David Anderson Construction Inc. is a northwestern Wisconsin based residential and commercial construction company that has been building extraordinary structures for three decades. Our quality workmanship has earned us a reputation as one of the area's premiere contractors. We specialize in ground-up construction and well as renovations, add-ons, and remodeling. We are experts in wood or steel constructions</p>
-            <p>Also check out the <a href="work.html">project page</a> where we showcase some of our work.</p>    
+            <!-- <p>Also check out the <a href="work.html">project page</a> where we showcase some of our work.</p>     -->
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
   <div id="features" class="page-section page-section__red">
     <div class="wrapper">
       
-        <h2 class="section-title"><img class="icons section-title__icon" src="assets/images/icons/tools.svg">Anderson Construction <strong>guarantees:</strong><h2>
+        <h2 class="section-title"><img class="icons section-title__icon" src="assets/images/icons/tools.svg">Anderson Construction guarantees:<h2>
 
           <div class="row row--gutters-large">
             <div class="row__large-3 row__medium-6">
@@ -150,7 +150,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span> <a href="#" class="btn btn__yellow">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span></p>
     </div>
   </footer>
 
