--- a/app/contact.html
+++ b/app/contact.html
@@ -58,8 +58,8 @@
         </div>
 
         <!-- <h2 class="banner__subtitle"></h2> -->
-        <p class="banner__description">Give us a call today and we'll set up an on-site appointment. We look forward to working with you!</p>
-        <p><a href="#" class="btn btn__large">Contact us Today</a></p>    
+        <p class="banner__description">Give us a call today and we'll set up an on-site appointment. <br>We look forward to working with you!</p>
+        <!-- <p><a href="#" class="btn btn__large">Contact us Today</a></p>     -->
 
       </div>
     </div>
@@ -73,8 +73,8 @@
 <div class="wrapper wrapper__background-img-form">  
 <div class="form__wrapper">
   <div class="form__container">
-    <div class="headline headline--small headline--centered">
-      <h2>Contact Us</h2>
+    <div class=" headline--small headline--centered">
+      <h2 class="headline--small">Contact Us</h2>
       <p class="form__text">Please complete the fields below and we will respond to your inquiry within 48 hours.</p>
     </div>
     <form>
@@ -218,7 +218,7 @@
           </div>
         </div>
       </div>
-      <input class="button" type="submit" value="Sumbit" />
+      <input class="button" type="submit" value="SEND" />
     </form>
   </div>
 </div>
@@ -230,7 +230,9 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span> <a href="#" class="btn btn__yellow">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span>
+         <!-- <a href="#" class="btn btn__yellow">Get in Touch</a> -->
+      </p>
     </div>
   </footer>
 
