--- a/app/work.html
+++ b/app/work.html
@@ -86,7 +86,7 @@
   <div id="portfolio" class="page-section page-section--no-b-padding-until-large page-section--portfolio">
     <div class="wrapper">
 
-      <h2 class="section-title section-title--light section-title--no-b-padding  section-title--background-color">
+      <h2 class="section-title section-title--no-b-padding  section-title--background-color">
         <img class="icons section-title__icon" src="assets/images/icons/skyline.svg">COMMERCIAL</h2>
 
 
@@ -238,7 +238,7 @@
           </div>
 
 
-          <h2 class="section-title section-title--light section-title--no-b-padding  section-title--background-color">
+          <h2 class="section-title section-title--no-b-padding  section-title--background-color">
               <img class="icons section-title__icon" src="assets/images/icons/house.svg">RESIDENTIAL</h2>
 
           <div class="row">
@@ -343,7 +343,7 @@
     <div class="wrapper">
       <p>
         <span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span>
-        <a href="#" class="btn btn__yellow">Get in Touch</a>
+        <!-- <a href="#" class="btn btn__yellow">Get in Touch</a> -->
       </p>
     </div>
   </footer>
