--- a/app/contact.html
+++ b/app/contact.html
@@ -187,7 +187,7 @@
               </div>
           </div>         
       </div>
-      <div class="row clearfix">
+      <div class="row">
         <div class="col_half">
              <label>Daytime Phone</label>
              <div class="input_field"> <span><i aria-hidden="true" class="fa fa-phone form__icon"></i></span>
