--- a/app/about.html
+++ b/app/about.html
@@ -28,10 +28,10 @@
       <div class="site-header__menu-content">
         <nav id="nav" class="navbar">
             <ul>
-              <li><a href="index.html" >Home</a></li>
-              <li><a class="navbar__active" href="about.html" >About Us</a></li>
-              <li><a href="work.html"  >Our Work</a></li>
-              <li><a href="contact.html" >Contact Us</a></li>
+              <li><a href="index" >Home</a></li>
+              <li><a class="navbar__active" href="about" >About Us</a></li>
+              <li><a href="work"  >Our Work</a></li>
+              <li><a href="contact" >Contact Us</a></li>
             </ul>
           </nav>
       </div>
