--- a/app/about.html
+++ b/app/about.html
@@ -28,7 +28,7 @@
       <div class="site-header__menu-content">
         <nav id="nav" class="navbar">
             <ul>
-              <li><a href="index" >Home</a></li>
+              <li><a href="home" >Home</a></li>
               <li><a class="navbar__active" href="about" >About Us</a></li>
               <li><a href="work"  >Our Work</a></li>
               <li><a href="contact" >Contact Us</a></li>
