--- a/app/home.html
+++ b/app/home.html
@@ -33,7 +33,7 @@
       <div class="site-header__menu-content">
         <nav id="nav" class="navbar">   
               <ul id="menu">
-                <li><a class="navbar__active" href="index" >Home</a></li>
+                <li><a class="navbar__active" href="home" >Home</a></li>
                 <li><a href="about" >About Us</a></li>
                 <li><a href="work"  >Our Work</a></li>
                 <li><a href="contact" >Contact Us</a></li>
