thank html and form spree added

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Anderson Construction</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
-  <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
 
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
@@ -154,27 +154,23 @@
     </div>
   </footer>
 
+
+
+
+
+
+
  
   <!-- build:js assets/scripts/App.js  -->
   <script src="/temp/scripts/App.js"></script>
 
    <!-- material-scrolltop button -->
-   <button class="material-scrolltop" type="button"></button>
-  <script src="/temp/scripts/material-scrolltop.js"></script>
+   <!-- <button class="material-scrolltop" type="button"></button> -->
+  <!-- <script src="/temp/scripts/material-scrolltop.js"></script> -->
   <!-- endbuild  -->
 
   <!-- Initialize -->
-  <script>
-        $(document).ready(function() {
-            $('body').materialScrollTop({
-                revealElement: 'header',
-                revealPosition: 'bottom',
-                onScrollEnd: function() {
-                    console.log('Scrolling End');
-                }
-            });
-        });
-    </script>
+ 
 
 </body>
 </html>
