--- a/app/work.html
+++ b/app/work.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Anderson Construction</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
-  <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
 
   <!-- build:css assets/styles/styles.css -->
   <link rel="stylesheet" href="temp/styles/styles.css">
   <link rel="stylesheet" href="temp/styles/lightbox.min.css" />
   <!-- endbuild -->
 
+
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
 
@@ -44,7 +46,7 @@
               <a class="navbar__active" href="work">Our Work</a>
             </li>
             <li>
-              <a href="contact">Contact Us</a>
+              <a href="contact" >Contact Us</a>
             </li>
           </ul>
         </nav>
