--- a/app/about.html
+++ b/app/about.html
@@ -4,13 +4,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Anderson Construction</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
-  <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
 
   <!-- build:css assets/styles/styles.css -->
   <link rel="stylesheet" href="temp/styles/styles.css">
-  <!-- endbuild -->
-  
+  <!-- endbuild --> 
   <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
 
 </head>
@@ -162,6 +161,17 @@
       </p>
     </div>
   </footer>
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- build:js assets/scripts/App.js  -->
     <script src="/temp/scripts/App.js"></script>
