--- a/app/contact.html
+++ b/app/contact.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Anderson Construction</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
-  <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
 
   <!-- build:css assets/styles/styles.css -->
   <link rel="stylesheet" href="temp/styles/styles.css">
@@ -33,7 +33,7 @@
               <li><a href="/" >Home</a></li>
               <li><a href="about" >About Us</a></li>
               <li><a href="work"  >Our Work</a></li>
-              <li><a class="navbar__active" href="contact" >Contact Us</a></li>
+              <li><a href="contact" >Contact Us</a></li>
             </ul>
           </nav>
       </div>
@@ -77,21 +77,21 @@
       <h2 class="headline--small">Contact Us</h2>
       <p class="form__text">Please complete the fields below and we will respond to your inquiry within 48 hours.</p>
     </div>
-    <form>
+    <form method="POST" action="https://formspree.io/ahrakim44@gmail.com">
       <!-- name field -->
       <div class="row clearfix">
         <div class="col_half">
-          <label>First name</label>
+          <label>Full Name </label>
           <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user form__icon"></i></span>
-            <input type="text" name="first_name" placeholder="John" required />
+            <input type="text" name="Name" placeholder="John Doe" required />
           </div>
         </div>
-        <div class="col_half">
+        <!-- <div class="col_half">
           <label>Last name</label>
           <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user form__icon"></i></span>
             <input type="text" name="last_name" placeholder="Doe" />
           </div>
-        </div>
+        </div> -->
       </div>
 
       <!-- address field -->
@@ -100,13 +100,13 @@
         <div class="col-one">
           <label for="">Address Line 1</label>
           <div class="input_field"><span><i aria-hidden="true" class="fa fa-address-book form__icon"></i></span>
-            <input type="text" name="adress" placeholder="address 1" required/>
+            <input type="text" name="Address" placeholder="12 E 34 Street" required/>
           </div>
         </div>        
           <div class="col-one">
             <label for="">Address Line 2</label>
             <div class="input_field"><span><i aria-hidden="true" class="fa fa-address-book form__icon"></i></span>
-              <input type="text" name="adress" placeholder="address 2" required/>
+              <input type="text" name="Address" placeholder="unit 5678" required/>
             </div>
           </div>        
       </div>
@@ -116,7 +116,7 @@
         <div class="col-med-one">
           <label for="">City</label>
           <div class="input_field"><span><i aria-hidden="true" class="fa fa-address-book form__icon"></i></span>
-            <input type="text" name="city" placeholder="City" required/>
+            <input type="text" name="City" placeholder="Chicago" required/>
           </div>
           </div>
         <div class="row clearfix">
@@ -124,7 +124,7 @@
           <div class="col-large-half">
               <label for="">State</label>
               <div class="input_field"><span><i aria-hidden="true" class="fa fa-address-book form__icon"></i></span>
-                <select name="city">
+                <select name="City">
                     <option value="AL">AL</option>
                     <option value="AK">AK</option>
                     <option value="AR">AR</option>	
@@ -183,22 +183,22 @@
           <div class="col-large-half">
               <label for="">Zip Code</label>
               <div class="input_field"><span><i aria-hidden="true" class="fa fa-address-book form__icon"></i></span>
-                <input type="text" name="zipcode" placeholder="zip code" required/>
+                <input type="text" name="Zip" placeholder="12345" required/>
               </div>
           </div>         
       </div>
       <div class="row">
         <div class="col_half">
-             <label>Daytime Phone</label>
+             <label>Work phone number <i>(e.g ###-###-####)</i></label>
              <div class="input_field"> <span><i aria-hidden="true" class="fa fa-phone form__icon"></i></span>
-               <input type="tel" name="phone_day" placeholder="Phone #" pattern="[0-9]{10}" />
+               <input type="tel" name="Work-phone" placeholder="123-456-7890" pattern="[0-9]{10}" />
              </div>
         </div>
         
         <div class="col_half">
-          <label>Evening Phone</label>
+          <label>Cell Phone Number <i>(e.g ###-###-####)</i></label>
           <div class="input_field"> <span><i aria-hidden="true" class="fa fa-phone form__icon"></i></span>
-            <input type="tel" name="phone_evening" placeholder="Phone #" pattern="[0-9]{10}" />
+            <input type="tel" name="cell-phone" placeholder="123-456-7890" pattern="[0-9]{10}" />
           </div>
         </div>
       </div>
@@ -206,19 +206,24 @@
           <div class="col_one">
               <label>Email</label>
               <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope form__icon"></i></span>
-                <input type="email" name="email" placeholder="johndoe@example.com" required />
+                <input type="email" name="Email" placeholder="johndoe@example.com" required />
               </div>
             </div>
       </div>
       <div class="row clearfix">
         <div>
-          <label>Comments</label>
+          <label>Message</label>
           <div class="textarea_field"> <span><i aria-hidden="true" class="fa fa-comment form__icon"></i></span>
-            <textarea cols="46" rows="3" name="comments"></textarea>
+            <textarea cols="46" rows="3" name="Message"></textarea>
           </div>
         </div>
       </div>
       <input class="button" type="submit" value="SEND" />
+      <input type="hidden" name="_next" value="//andersonconstructionfrederic.com/thanks" />
+	    <input type="text" name="_gotcha" style="display:none" />
+	    <input type="hidden" name="_format" value="plain" />
+	    <input type="hidden" name="_subject" value="New submission!" />
+
     </form>
   </div>
 </div>
