--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
         <!-- <h2 class="banner__subtitle"></h2> -->
         <!-- <p class="banner__description">Creating quality lifestyles, building stronger communities</p> -->
-        <p><a href="#" class="btn btn__large">Contact us Today</a></p>
+        <p><a href="contact" class="btn btn__large">Contact us Today</a></p>
 
 
       </div>
