--- a/app/contact.html
+++ b/app/contact.html
@@ -77,7 +77,7 @@
       <h2 class="headline--small">Contact Us</h2>
       <p class="form__text">Please complete the fields below and we will respond to your inquiry within 48 hours.</p>
     </div>
-    <form method="POST" action="https://formspree.io/ahrakim44@gmail.com">
+    <form method="POST" action="https://formspree.io/andersonconstructionfrederic@gmail.com">
       <!-- name field -->
       <div class="row clearfix">
         <div class="col_half">
