home page edited.  add animation later.

--- a/app/contact.html
+++ b/app/contact.html
@@ -106,7 +106,7 @@
           <div class="col-one">
             <label for="">Address Line 2</label>
             <div class="input_field"><span><i aria-hidden="true" class="fa fa-address-book form__icon"></i></span>
-              <input type="text" name="Address" placeholder="unit 5678" required/>
+              <input type="text" name="Address" placeholder="unit 5678"/>
             </div>
           </div>        
       </div>
