updated about design.

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
   <div class="banner"> <!--large-hero on the example-->
     
     <picture>
-      <source srcset="assets/images/banner-large.jpg" media="(min-width:1200px)">
+      <source srcset="assets/images/banner-large2.jpg" media="(min-width:1200px)">
       <source srcset="assets/images/banner-medium.jpg" media="(min-width:990px)">
       <source srcset="assets/images/banner-small.jpg 990w, assets/images/banner-small-hi-dpi.jpg 1697w " media="(min-width:640px)">
       <img srcset="assets/images/banner-smaller.jpg 640w, assets/images/banner-smaller-hi-dpi.jpg 1418w" class="banner__image" alt="interior">
@@ -90,7 +90,7 @@
 
         <div class="row__medium-8 row__medium-8--smaller">
           <div class="generic-content-container">
-            <h2 class="headline headline--centered headline--no-t-margin">Why David Anderson Construction?</h2>
+            <h2 class="headline headline--no-t-margin">Why David Anderson Construction?</h2>
             <p>David Anderson Construction Inc. is a northwestern Wisconsin based residential and commercial construction company that has been building extraordinary structures for three decades. Our quality workmanship has earned us a reputation as one of the area's premiere contractors. We specialize in ground-up construction and well as renovations, add-ons, and remodeling. We are experts at wood and steel constructions. Anderson Construction is licensed and bonded</p>
             <!-- <p>Also check out the <a href="work.html">project page</a> where we showcase some of our work.</p>     -->
           </div>
