members pics added

--- a/app/about.html
+++ b/app/about.html
@@ -116,16 +116,16 @@
   <div id="members" class="page-section page-section--no-b-padding-until-large page-section--members">
     <div class="wrapper wrapper--no-padding-until-large">
       
-      <h2 class="section-title section-title--blue"><img class="icons section-title__icon" src="assets/images/icons/helmet.svg">Meet The Team</h2>
+      <h2 class="section-title "><img class="icons section-title__icon" src="assets/images/icons/helmet.svg">Meet The Team</h2>
       
       <div class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding ">
         <div class="row__large-6">
           <div class="members">
             <div class="members__photo">
-              <img sizes="160px" srcset="assets/images/woody.jpg 160w,assets/images/woody-hi-dpi.jpg 320w" alt="president">
+              <img sizes="160px" srcset="assets/images/members/david.jpg 160w,assets/images/members/david-hi-dpi.jpg 320w" alt="David Anderson">
             </div>
 
-            <h3 class="members__name">Woody Anderson</h3>
+            <h3 class="members__name">David Anderson</h3>
             <h4 class="members__subtitle">President</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.magna aliqua.&rdquo;</p>
           </div>          
@@ -134,26 +134,26 @@
         <div class="row__large-6">
           <div class="members">
             <div class="members__photo">
-              <img sizes="160px" srcset="assets/images/pabble.jpg 160w,assets/images/pabble-hi-dpi.jpg 320w" alt="vice-president">
+              <img sizes="160px" srcset="assets/images/members/steve.jpg 160w,assets/images/members/steve-hi-dpi.jpg 320w" alt="Steve Wussler">
             </div>
 
-            <h3 class="members__name">Pabble Anderson</h3>
-            <h4 class="members__subtitle">Vice President</h4>
+            <h3 class="members__name">Steve Wussler</h3>
+            <h4 class="members__subtitle">Position</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deonsectetur.&rdquo;</p>
           </div>
         </div>
       </div>
 
-      <div class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding ">
+      <div class="row row--gutters row--equal-height-at-large row--gutters-small">
 
         <div class="row__large-6">
           <div class="members">
             <div class="members__photo">
-              <img sizes="160px" srcset="assets/images/pabble.jpg 160w,assets/images/pabble-hi-dpi.jpg 320w" alt="vice-president">
+              <img sizes="160px" srcset="assets/images/members/zack.jpg 160w,assets/images/members/zack-hi-dpi.jpg 320w" alt="Zack Anderson">
             </div>
 
-            <h3 class="members__name">Pabble Anderson</h3>
-            <h4 class="members__subtitle">Vice President</h4>
+            <h3 class="members__name">Zack Anderson</h3>
+            <h4 class="members__subtitle">Position</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deonsectetur.&rdquo;</p>
           </div>
         </div>
@@ -163,11 +163,11 @@
         <div class="row__large-6">
           <div class="members members--last">
             <div class="members__photo">
-              <img sizes="160px" srcset="assets/images/daisey.jpg 160w,assets/images/daisey-hi-dpi.jpg 320w" alt="intern">
+              <img sizes="160px" srcset="assets/images/members/mark.jpg 160w,assets/images/members/mark-hi-dpi.jpg 320w" alt="Mark Ronningen">
             </div>
 
-            <h3 class="members__name">Daisey Anderson</h3>
-            <h4 class="members__subtitle">Intern</h4>
+            <h3 class="members__name">Mark Ronningen</h3>
+            <h4 class="members__subtitle">Position</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia der incididunt ut.&rdquo;</p>
           </div>
         </div>
