changes for each page done..about to make contact bar on top of the page

--- a/app/contact.html
+++ b/app/contact.html
@@ -58,7 +58,9 @@
         </div>
 
         <!-- <h2 class="banner__subtitle"></h2> -->
-        <p class="banner__description">Give us a call today and we'll set up an on-site appointment. <br>We look forward to working with you!</p>
+        <p class="banner__description">Call or email us today to get ansers to your questions or to set up an appointment for a meeting and a free estimate.</p>
+        <p  class="banner__description">715 - 491 - 7478 to speak with David</p>
+        <!-- <p></p> -->
         <!-- <p><a href="#" class="btn btn__large">Contact us Today</a></p>     -->
 
       </div>
