--- a/app/work.html
+++ b/app/work.html
@@ -62,8 +62,8 @@
     <picture>
       <source srcset="assets/images/work-large.jpg" media="(min-width:1200px)">
       <source srcset="assets/images/work-medium.jpg" media="(min-width:990px)">
-      <source srcset="assets/images/work-small.jpg 990w, assets/images/work-small-hi-dpi.jpg 1697w " media="(min-width:640px)">
-      <img srcset="assets/images/work-smaller.jpg 640w, assets/images/work-smaller-hi-dpi.jpg 1418w" class="banner__image" alt="paper-work">
+      <source srcset="assets/images/work-small.jpg 990w, assets/images/work-small-hi-dpi.jpg 1288w " media="(min-width:640px)">
+      <img srcset="assets/images/work-smaller.jpg 640w, assets/images/work-smaller-hi-dpi.jpg 1333w" class="banner__image" alt="paper-work">
     </picture>
 
     <div class="banner__text-content">
@@ -75,7 +75,7 @@
         </div>
 
         <!-- <h2 class="banner__subtitle"></h2> -->
-        <p class="banner__description-large">Anderson Construction</p> 
+        <p class="banner__description-large">ANDERSON CONSTRUCTION</p> 
 
       </div>
     </div>
@@ -101,7 +101,7 @@
             <div class="portfolio__mainImage">
               <div class="">
                   <a href="assets/images/gallery/adventures/adventures1.jpg" data-lightbox="1" data-title="">
-                    <img src="assets/images/gallery/adventures/adventures1.jpg " alt="" class="portfolio__img">
+                    <img src="assets/images/gallery/adventures/adventures1.jpg " alt="" class="">
                   </a>
               </div>
             </div>
@@ -142,7 +142,7 @@
             <div class="portfolio__mainImage">
                 <div class="">
                     <a href="assets/images/gallery/timber/timber1.jpg" data-lightbox="2" data-title="">
-                      <img src="assets/images/gallery/timber/timber1.jpg " alt="" class="portfolio__img">
+                      <img src="assets/images/gallery/timber/timber1.jpg " alt="" class="">
                     </a>
                 </div>
               </div>
@@ -184,7 +184,7 @@
               <div class="portfolio__mainImage">
                   <div class="">
                       <a href="assets/images/gallery/log/log1.jpg" data-lightbox="3" data-title="">
-                        <img src="assets/images/gallery/log/log1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/images/gallery/log/log1.jpg" alt="" class=" ">
                       </a>
                   </div>
                 </div>
@@ -222,7 +222,7 @@
               <div class="portfolio__mainImage">
                   <div class="">
                       <a href="assets/images/gallery/food/waynes1.jpg" data-lightbox="4" data-title="">
-                        <img src="assets/images/gallery/food/waynes1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/images/gallery/food/waynes1.jpg" alt="" class=" ">
                       </a>
                   </div>
                 </div>
@@ -257,7 +257,7 @@
                 <div class="portfolio__mainImage">
                     <div class="">
                         <a href="assets/images/gallery/subway/subway1.jpg" data-lightbox="5" data-title="">
-                          <img src="assets/images/gallery/subway/subway1-crop.jpg" alt="" class="portfolio__img">
+                          <img src="assets/images/gallery/subway/subway1-crop.jpg" alt="" class=" ">
                         </a>
                     </div>
                   </div>
@@ -295,7 +295,7 @@
                 <div class="portfolio__mainImage">
                     <div class="">
                         <a href="assets/images/gallery/bank/bank1.jpg" data-lightbox="6" data-title="">
-                          <img src="assets/images/gallery/bank/bank1-crop.jpg " alt="" class="portfolio__img">
+                          <img src="assets/images/gallery/bank/bank1-crop.jpg " alt="" class=" ">
                         </a>
                     </div>
                   </div>
@@ -336,7 +336,7 @@
                   <div class="portfolio__mainImage">
                       <div class="">
                           <a href="assets/images/gallery/office/office1.jpg" data-lightbox="7" data-title="">
-                            <img src="assets/images/gallery/office/office1-crop.jpg " alt="" class="portfolio__img">
+                            <img src="assets/images/gallery/office/office1-crop.jpg " alt="" class=" ">
                           </a>
                       </div>
                     </div>
@@ -381,7 +381,7 @@
                 <div class="portfolio__mainImage">
                   <div class="">
                       <a href="assets/images/gallery/lake/lake1.jpg" data-lightbox="8" data-title="">
-                        <img src="assets/images/gallery/lake/lake1-crop.jpg " alt="" class="portfolio__img">
+                        <img src="assets/images/gallery/lake/lake1-crop.jpg " alt="" class=" ">
                       </a>
                   </div>
                 </div>
