--- a/app/contact.html
+++ b/app/contact.html
@@ -283,6 +283,7 @@
   <footer class="site-footer">
     <div class="wrapper">
       <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span>
+        <p ><span class="site-footer--ara">Designed and Developed by <a target="_blank" href="http://www.arakim.me/">Ara Kim</a></span></p>
          <!-- <a href="#" class="btn btn__yellow">Get in Touch</a> -->
       </p>
     </div>
