--- a/app/index.html
+++ b/app/index.html
@@ -199,6 +199,7 @@
   <footer class="site-footer">
     <div class="wrapper">
       <p><span class="site-footer__text">Copyright &copy; 2018 Anderson Construction. All rights reserved.</span></p>
+      <p ><span class="site-footer--ara">Designed and Developed by <a target="_blank" href="http://www.arakim.me/">Ara Kim</a></span></p>
     </div>
   </footer>
 
