--- a/app/contact.html
+++ b/app/contact.html
@@ -66,7 +66,9 @@
         </div>
 
         <!-- <h2 class="banner__subtitle"></h2> -->
-        <p class="banner__description">Call or email us today to get answers to your questions or to set up an appointment for a meeting and a free estimate.</p>        <!-- <p></p> -->
+        <p class="banner__description">Give us a call today and we'll set up an on-site appointment. <br>
+          We look forward to working with you!
+          </p>        <!-- <p></p> -->
         <!-- <p><a href="#" class="btn btn__large">Contact us Today</a></p>     -->
 
       </div>
@@ -199,7 +201,7 @@
         <div class="col_half">
              <label>Work phone number </label>
              <div class="input_field"> <span><i aria-hidden="true" class="fa fa-phone form__icon"></i></span>
-               <input type="tel" name="Work-phone" placeholder="123-456-7890" required />
+               <input type="tel" name="Work-phone" placeholder="123-456-7890"/>
              </div>
         </div>
         
@@ -263,7 +265,7 @@
           <span>Mon to Sun - 8:00am to 9:00pm</span>
           <!-- <span>(Sunday Closed)</span> -->
           <br><br>
-          <h3>Fallow us on  </h3>
+          <h3>Follow us on  </h3>
           <span>
             <a target="_blank" href="https://www.facebook.com/andersonconstructionfrederic/"><i class="fa fa-facebook icons--circle"></i></a> 
 
