--- a/app/thanks.html
+++ b/app/thanks.html
@@ -108,7 +108,7 @@
             <span>Mon to Sun - 8:00am to 9:00pm</span>
             <!-- <span>(Sunday Closed)</span> -->
             <br><br>
-            <h3>Fallow us on  </h3>
+            <h3>Follow us on  </h3>
             <span>
               <a target="_blank" href="https://www.facebook.com/andersonconstructionfrederic/"><i class="fa fa-facebook icons--circle"></i></a> 
   
